[package]
name = "Mnemosyne"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = "0.116.1"
vulkano = "0.35.0"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["syntect"] }
egui-winit = "0.31.0"
winit = "0.30.8"
png = "0.17.16"
serde_json = "1.0"
syntect = "5.2.0"
image = "0.25.5"
intbits = "0.2.0"

[dev-dependencies]
seq-macro = "0.3.5"
test-case = "3.3.1"