[package]
name = "Mnemosyne"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = "0.35.0"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["syntect"] }
egui-winit = "0.31.0"
winit = "0.30.8"
png = "0.17.16"
serde_json = "1.0"
syntect = "5.2.0"
image = "0.25.5"
intbits = "0.2.0"
egui_logger = { git = "https://github.com/rnd-ash/egui_logger.git" }
log = "0.4.26"
flexi_logger = "0.29.8"
multi_log = "0.1.2"
puffin = { git = "https://github.com/tedsteen/puffin.git", branch = "upgrade-egui" }
puffin_egui = { git = "https://github.com/tedsteen/puffin.git", branch = "upgrade-egui" }

[dev-dependencies]
test-case = "3.3.1"